--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-    <meta name="author" content="ATL Mendoza">
-    <meta name="description" content="What and Who are my whole world">
-    <meta name="keyword" content="God, Faith, Family, Friends, School, Student">
-    <meta name="revised" content="12/29/2021">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <!--link rel="icon" href="./images/pshslogo.png" type="images/png"-->
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   Hello world
-  
+  <script src="script.js"></script>
+
+ <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
 
 </html>
