--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<title>My Example with CSS for Form</title>
 
 <body>
-  <h1> Sample </h1>
-  <script>
-  </script>
+  Hello world for the nth time
+  THis is just a test
 </body>
 
 </html>
